Ведутся расчеты